--- a/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
+++ b/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 131,
    "outputs": [
     {
      "name": "stdout",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 132,
    "outputs": [],
    "source": [
     "# Aby wiedzieć ILE i jakie rozgałęzienia będzie miało nasze drzewo, gdy podzielimy na tym atrybucie\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 133,
    "outputs": [],
    "source": [
     "import math\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 134,
    "outputs": [],
    "source": [
     "def build_tree_with_decision(df, tree, columns, parent=None, parent_id=\"root\"):\n",
@@ -219,7 +219,7 @@
     "        count_survived = len(df[df['Survived'] == 1])\n",
     "        count_dead = len(df[df['Survived'] == 0])\n",
     "        # Tworzy liść z wynikiem\n",
-    "        tree.create_node(f\"Survived: ? (Survived: {count_survived}, Dead: {count_dead})\", parent_id, parent=parent)\n",
+    "        tree.create_node(f\"Niejednoznaczny wynik (Survived: {count_survived}, Dead: {count_dead})\", parent_id, parent=parent)\n",
     "        return\n",
     "\n",
     "    # kolumnę na podstawię której właśnie dzielimy, usuwamy, przekazując do węzła-dziecka\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 135,
    "outputs": [
     {
      "name": "stdout",
@@ -330,11 +330,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 136,
    "outputs": [],
    "source": [
-    "# todo"
+    "from itertools import combinations\n",
+    "\n",
+    "\n",
+    "# Wgranie danych do dataframe'u, tym razem bez mapowania Age na sztucznie nałożone granice, ale z sortowaniem po \"Age\" oraz \"Survived\"\n",
+    "def prepare_pandas_df(path):\n",
+    "    data = pandas.read_csv(path)\n",
+    "    data = data.drop(['PassengerId', 'Name'], axis=1)\n",
+    "    data = data.sort_values(by=['Age', 'Survived']).reset_index(drop=True)\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "def map_splits_on_data(df, splits):\n",
+    "    # Funkcja pomocnicza do przypisania klasy na podstawie progów podziału\n",
+    "    def assign_class(age):\n",
+    "        for i, split in enumerate(splits):\n",
+    "            if age <= split:\n",
+    "                return i\n",
+    "        return len(splits)  # Jeśli większy niż ostatni próg, przypisz ostatnią klasę\n",
+    "\n",
+    "    # Zastępujemy wartości w kolumnie \"Age\" przypisanymi klasami (ich numerami)\n",
+    "    df['Age'] = df['Age'].apply(assign_class)\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "# Funkcja wyliczająca najlepsze progi podziału dla ciągłej zmiennej \"Age\"\n",
+    "def find_best_splits_for_continuous(df, num_classes):\n",
+    "    if num_classes <= 1:\n",
+    "        return []\n",
+    "    if num_classes >= 4:\n",
+    "        print(f'To chwilę potrwa, nawet na naszym \"małym\" datasecie num_classes = {num_classes}')\n",
+    "\n",
+    "    # Określenie potencjalnych progów podziału (średnie wartości między punktami gdzie zmienia się klasa)\n",
+    "    potential_splits = []\n",
+    "    for i in range(len(df) - 1):\n",
+    "        if df['Survived'][i] != df['Survived'][i + 1]:\n",
+    "            potential_split = (df['Age'][i] + df['Age'][i + 1]) / 2\n",
+    "            potential_splits.append(potential_split)\n",
+    "\n",
+    "    # Przygotowanie do znalezienia najlepszych progów podziału\n",
+    "    best_splits = []\n",
+    "    best_gain = -1\n",
+    "\n",
+    "    # Kombinacje potencjalnych progów (do sprawdzenia brute-force najlepszej kombinacji)\n",
+    "    possible_splits = list(combinations(potential_splits, num_classes - 1))\n",
+    "    for split_combination in possible_splits:\n",
+    "        splits = []\n",
+    "        prev_split = 0.0\n",
+    "\n",
+    "        # Podział na grupy zgodnie z kombinacją progów\n",
+    "        for split in split_combination:\n",
+    "            current_split = df[(df['Age'] > prev_split) & (df['Age'] <= split)]\n",
+    "            counts = [len(current_split[current_split['Survived'] == cls]) for cls in df['Survived'].unique()]\n",
+    "            splits.append(counts)\n",
+    "            prev_split = split\n",
+    "\n",
+    "        # Dodanie ostatniego przedziału\n",
+    "        last_split = df[df['Age'] > split_combination[-1]]\n",
+    "        counts = [len(last_split[last_split['Survived'] == cls]) for cls in df['Survived'].unique()]\n",
+    "        splits.append(counts)\n",
+    "\n",
+    "        # Znalezienie najlepszej kombinacji progów\n",
+    "        ig = information_gain(splits)\n",
+    "        if ig > best_gain:\n",
+    "            best_gain = ig\n",
+    "            best_splits = split_combination\n",
+    "\n",
+    "    return sorted(best_splits)\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Driver code dla przypadku pro"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root - Sex (Survived: 40, Dead: 60)\n",
+      "├── female - SibSp (Survived: 33, Dead: 7)\n",
+      "│   ├── 1 - Pclass (Survived: 11, Dead: 4)\n",
+      "│   │   ├── 3 - Parch (Survived: 2, Dead: 4)\n",
+      "│   │   │   ├── Dead: 4\n",
+      "│   │   │   ├── Survived: 1\n",
+      "│   │   │   └── Survived: 1\n",
+      "│   │   ├── Survived: 4\n",
+      "│   │   └── Survived: 5\n",
+      "│   ├── 3 - Age (Survived: 2, Dead: 1)\n",
+      "│   │   ├── Dead: 1\n",
+      "│   │   └── Survived: 2\n",
+      "│   ├── Dead: 1\n",
+      "│   ├── Dead: 1\n",
+      "│   ├── Survived: 1\n",
+      "│   └── Survived: 19\n",
+      "└── male - Pclass (Survived: 7, Dead: 53)\n",
+      "    ├── 1 - SibSp (Survived: 4, Dead: 9)\n",
+      "    │   ├── 0 - Age (Survived: 4, Dead: 4)\n",
+      "    │   │   ├── 2 - Parch (Survived: 3, Dead: 4)\n",
+      "    │   │   │   ├── Niejednoznaczny wynik (Survived: 1, Dead: 1)\n",
+      "    │   │   │   └── Niejednoznaczny wynik (Survived: 2, Dead: 3)\n",
+      "    │   │   └── Survived: 1\n",
+      "    │   ├── Dead: 1\n",
+      "    │   └── Dead: 4\n",
+      "    ├── 2 - Age (Survived: 2, Dead: 7)\n",
+      "    │   ├── Dead: 1\n",
+      "    │   ├── Dead: 6\n",
+      "    │   └── Survived: 2\n",
+      "    └── 3 - Parch (Survived: 1, Dead: 37)\n",
+      "        ├── 1 - Age (Survived: 1, Dead: 3)\n",
+      "        │   ├── Dead: 3\n",
+      "        │   └── Survived: 1\n",
+      "        ├── Dead: 1\n",
+      "        ├── Dead: 1\n",
+      "        ├── Dead: 29\n",
+      "        └── Dead: 3\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dane = prepare_pandas_df(\"titanic-homework.csv\")\n",
+    "best_splits = find_best_splits_for_continuous(dane, 3)\n",
+    "dane = map_splits_on_data(dane, best_splits)\n",
+    "\n",
+    "decision_tree = Tree()\n",
+    "columns = get_column_names(dane)\n",
+    "build_tree_with_decision(dane, decision_tree, columns)\n",
+    "print(decision_tree.show(stdout=False))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false
    }
