--- a/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
+++ b/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 139,
    "outputs": [
     {
      "name": "stdout",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 140,
    "outputs": [],
    "source": [
     "# Aby wiedzieć ILE i jakie rozgałęzienia będzie miało nasze drzewo, gdy podzielimy na tym atrybucie\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 141,
    "outputs": [],
    "source": [
     "import math\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 142,
    "outputs": [],
    "source": [
     "def build_tree_with_decision(df, tree, columns, parent=None, parent_id=\"root\"):\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 143,
    "outputs": [
     {
      "name": "stdout",
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 144,
    "outputs": [],
    "source": [
     "from itertools import combinations\n",
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 145,
    "outputs": [
     {
      "name": "stdout",
@@ -466,6 +466,7 @@
    "source": [
     "dane = prepare_pandas_df(\"titanic-homework.csv\")\n",
     "best_splits = find_best_splits_for_continuous(dane, 3)\n",
+    "# best_splits = (20, 40)   # Przypadek z wersji na 4.0\n",
     "dane = map_splits_on_data(dane, best_splits)\n",
     "\n",
     "decision_tree = Tree()\n",
@@ -479,7 +480,9 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "W wariancie na 5.0, a więc z progami wybieranymi dynamicznie pod względem information gain można zauważyć, że pojawiają się w drzewie liście z niesprecyzowanymi danymi. Najpewniej jest to efekt dobrania danych w taki sposób, aby wariant na 4.0 takich nie zawierał, ale mogę się mylić."
+   ],
    "metadata": {
     "collapsed": false
    }
