--- a/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
+++ b/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
@@ -236,7 +236,7 @@
     "    param = parent_id.split('_')[-1]\n",
     "    tree.create_node(f\"{param} - {best_column} (Survived: {count_survived}, Dead: {count_dead})\", node_id, parent=parent)\n",
     "\n",
-    "    # Rekurencyjnie budujemy dalej całe drzewo, przekazując do węzła-dziekca parametry pomniejszone o zużyty już parametr, oraz odpowiednio odfiltrowane dane (df i kolumn) oraz swoje id, które użyje do nadania sobie id.\n",
+    "    # Rekurencyjnie budujemy dalej całe drzewo, przekazując do węzła-dziecka parametry pomniejszone o zużyty już parametr, oraz odpowiednio odfiltrowane dane (df i kolumn) oraz swoje id, które użyje do nadania sobie id.\n",
     "    for val in possible_values(df, best_column):\n",
     "        filtered_df = df[df[best_column] == val]\n",
     "        id_for_child = f\"{node_id}_{val}\"\n",
