--- a/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
+++ b/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
@@ -133,15 +133,17 @@
    "source": [
     "import math\n",
     "\n",
-    "def entropy(lista):\n",
+    "# podstawowa funkcja, licząca entropię. Danymi wejściowymi jest lista list, gdzie listy wewnętrzne mają tylko 2 elementy, np. [[0, 2], [1, 1], [4, 2]].\n",
+    "def entropy(dane):\n",
     "    e = 0\n",
-    "    suma = sum(lista)\n",
-    "    for i in lista:\n",
+    "    suma = sum(dane)\n",
+    "    for i in dane:\n",
     "        if i != 0:\n",
     "            e -= (i / suma) * math.log(i / suma, 2)\n",
     "    return e\n",
     "\n",
     "\n",
+    "# funkcja obliczająca entropię warunkową z wykorzystaniem zdefiniowanej wcześniej funkcji entropii. Dane wejściowe są identyczne jak w funkcji wyżej.\n",
     "def conditional_entropy(dane):\n",
     "    ce = 0\n",
     "    ile = 0\n",
@@ -153,6 +155,7 @@
     "    return ce\n",
     "\n",
     "\n",
+    "# funkcja obliczająca zysk informacyjny przy użyciu dwóch poprzednich funkcji. Forma danych wejściowych jest taka sama jak w poprzednich funkcjach.\n",
     "def information_gain(dane):\n",
     "    y = 0\n",
     "    n = 0\n",
@@ -164,7 +167,7 @@
     "    return ig\n",
     "\n",
     "\n",
-    "# Zawiera w sobie IntrinsicInfo??? (chyba) #todo Smoku to Twoja funkcja, opisz proszę swoje rzeczy\n",
+    "# funkcja obliczająca gain ratio przy użyciu intrinsic info. Dane wejściowe mają identyczną formę jak w poprzednich funkcjach.\n",
     "def gain_ratio(dane):\n",
     "    ig = information_gain(dane)\n",
     "    ii = 0\n",
