więcej komitów projekt wytrzyma

--- a/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
+++ b/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
@@ -134,10 +134,10 @@
     "import math\n",
     "\n",
     "Podstawowa funkcja licząca entropię. Danymi wejściowymi jest lista list, gdzie listy wewnętrzne mają tylko 2 elementy, np. [[0, 2], [1, 1], [4, 2]].\n",
-    "def entropy(lista):\n",
+    "def entropy(dane):\n",
     "    e = 0\n",
-    "    suma = sum(lista)\n",
-    "    for i in lista:\n",
+    "    suma = sum(dane)\n",
+    "    for i in dane:\n",
     "        if i != 0:\n",
     "            e -= (i / suma) * math.log(i / suma, 2)\n",
     "    return e\n",
