--- a/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
+++ b/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
@@ -29,29 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Pclass     Sex     Age  SibSp  Parch  Survived\n",
-      "0        3    male  middle      1      0         0\n",
-      "1        1  female  middle      1      0         1\n",
-      "2        3  female  middle      0      0         1\n",
-      "3        1  female  middle      1      0         1\n",
-      "4        3    male  middle      0      0         0\n",
-      "..     ...     ...     ...    ...    ...       ...\n",
-      "95       3    male     old      0      0         0\n",
-      "96       1    male     old      0      0         0\n",
-      "97       1    male  middle      0      1         1\n",
-      "98       2  female  middle      0      1         1\n",
-      "99       2    male  middle      1      0         0\n",
-      "\n",
-      "[100 rows x 6 columns]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import pandas\n",
     "\n",
@@ -81,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Aby wiedzieć ILE i jakie rozgałęzienia będzie miało nasze drzewo, gdy podzielimy na tym atrybucie\n",
@@ -128,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import math\n",
@@ -143,7 +122,7 @@
     "    return e\n",
     "\n",
     "\n",
-    "# funkcja obliczająca entropię warunkową z wykorzystaniem zdefiniowanej wcześniej funkcji entropii. Dane wejściowe są identyczne jak w funkcji wyżej.\n",
+    "# Funkcja obliczająca entropię warunkową z wykorzystaniem zdefiniowanej wcześniej funkcji entropii. Dane wejściowe są identyczne jak w funkcji wyżej.\n",
     "def conditional_entropy(dane):\n",
     "    ce = 0\n",
     "    ile = 0\n",
@@ -155,7 +134,7 @@
     "    return ce\n",
     "\n",
     "\n",
-    "# funkcja obliczająca zysk informacyjny przy użyciu dwóch poprzednich funkcji. Forma danych wejściowych jest taka sama jak w poprzednich funkcjach.\n",
+    "# Funkcja obliczająca zysk informacyjny przy użyciu dwóch poprzednich funkcji. Forma danych wejściowych jest taka sama jak w poprzednich funkcjach.\n",
     "def information_gain(dane):\n",
     "    y = 0\n",
     "    n = 0\n",
@@ -167,7 +146,7 @@
     "    return ig\n",
     "\n",
     "\n",
-    "# funkcja obliczająca gain ratio przy użyciu intrinsic info. Dane wejściowe mają identyczną formę jak w poprzednich funkcjach.\n",
+    "# Funkcja obliczająca gain ratio przy użyciu intrinsic info. Dane wejściowe mają identyczną formę jak w poprzednich funkcjach.\n",
     "def gain_ratio(dane):\n",
     "    ig = information_gain(dane)\n",
     "    ii = 0\n",
@@ -194,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def build_tree_with_decision(df, tree, columns, parent=None, parent_id=\"root\"):\n",
@@ -260,53 +239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root - Sex (Survived: 40, Dead: 60)\n",
-      "├── female - SibSp (Survived: 33, Dead: 7)\n",
-      "│   ├── 1 - Pclass (Survived: 11, Dead: 4)\n",
-      "│   │   ├── 3 - Parch (Survived: 2, Dead: 4)\n",
-      "│   │   │   ├── Dead: 4\n",
-      "│   │   │   ├── Survived: 1\n",
-      "│   │   │   └── Survived: 1\n",
-      "│   │   ├── Survived: 4\n",
-      "│   │   └── Survived: 5\n",
-      "│   ├── 3 - Age (Survived: 2, Dead: 1)\n",
-      "│   │   ├── Dead: 1\n",
-      "│   │   └── Survived: 2\n",
-      "│   ├── Dead: 1\n",
-      "│   ├── Dead: 1\n",
-      "│   ├── Survived: 1\n",
-      "│   └── Survived: 19\n",
-      "└── male - Pclass (Survived: 7, Dead: 53)\n",
-      "    ├── 1 - Age (Survived: 4, Dead: 9)\n",
-      "    │   ├── Dead: 7\n",
-      "    │   ├── middle - SibSp (Survived: 3, Dead: 1)\n",
-      "    │   │   ├── Dead: 1\n",
-      "    │   │   └── Survived: 3\n",
-      "    │   └── young - SibSp (Survived: 1, Dead: 1)\n",
-      "    │       ├── Dead: 1\n",
-      "    │       └── Survived: 1\n",
-      "    ├── 2 - Age (Survived: 2, Dead: 7)\n",
-      "    │   ├── Dead: 1\n",
-      "    │   ├── Dead: 6\n",
-      "    │   └── Survived: 2\n",
-      "    └── 3 - Parch (Survived: 1, Dead: 37)\n",
-      "        ├── 1 - Age (Survived: 1, Dead: 3)\n",
-      "        │   ├── Dead: 3\n",
-      "        │   └── Survived: 1\n",
-      "        ├── Dead: 1\n",
-      "        ├── Dead: 1\n",
-      "        ├── Dead: 29\n",
-      "        └── Dead: 3\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from treelib import Tree\n",
     "\n",
@@ -333,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "from itertools import combinations\n",
@@ -419,53 +353,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root - Sex (Survived: 40, Dead: 60)\n",
-      "├── female - SibSp (Survived: 33, Dead: 7)\n",
-      "│   ├── 1 - Pclass (Survived: 11, Dead: 4)\n",
-      "│   │   ├── 3 - Parch (Survived: 2, Dead: 4)\n",
-      "│   │   │   ├── Dead: 4\n",
-      "│   │   │   ├── Survived: 1\n",
-      "│   │   │   └── Survived: 1\n",
-      "│   │   ├── Survived: 4\n",
-      "│   │   └── Survived: 5\n",
-      "│   ├── 3 - Age (Survived: 2, Dead: 1)\n",
-      "│   │   ├── Dead: 1\n",
-      "│   │   └── Survived: 2\n",
-      "│   ├── Dead: 1\n",
-      "│   ├── Dead: 1\n",
-      "│   ├── Survived: 1\n",
-      "│   └── Survived: 19\n",
-      "└── male - Pclass (Survived: 7, Dead: 53)\n",
-      "    ├── 1 - SibSp (Survived: 4, Dead: 9)\n",
-      "    │   ├── 0 - Age (Survived: 4, Dead: 4)\n",
-      "    │   │   ├── 2 - Parch (Survived: 3, Dead: 4)\n",
-      "    │   │   │   ├── Niejednoznaczny wynik (Survived: 1, Dead: 1)\n",
-      "    │   │   │   └── Niejednoznaczny wynik (Survived: 2, Dead: 3)\n",
-      "    │   │   └── Survived: 1\n",
-      "    │   ├── Dead: 1\n",
-      "    │   └── Dead: 4\n",
-      "    ├── 2 - Age (Survived: 2, Dead: 7)\n",
-      "    │   ├── Dead: 1\n",
-      "    │   ├── Dead: 6\n",
-      "    │   └── Survived: 2\n",
-      "    └── 3 - Parch (Survived: 1, Dead: 37)\n",
-      "        ├── 1 - Age (Survived: 1, Dead: 3)\n",
-      "        │   ├── Dead: 3\n",
-      "        │   └── Survived: 1\n",
-      "        ├── Dead: 1\n",
-      "        ├── Dead: 1\n",
-      "        ├── Dead: 29\n",
-      "        └── Dead: 3\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "dane = prepare_pandas_df(\"titanic-homework.csv\")\n",
     "best_splits = find_best_splits_for_continuous(dane, 3)\n",
@@ -485,6 +374,175 @@
    "cell_type": "markdown",
    "source": [
     "W wariancie na 5.0, a więc z progami wybieranymi dynamicznie pod względem information gain można zauważyć, że pojawiają się w drzewie liście z niesprecyzowanymi danymi. Najpewniej jest to efekt dobrania danych w taki sposób, aby wariant na 4.0 takich nie zawierał, ale mogę się mylić."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Tutaj poprawki zamieszczonych uwag:\n",
+    "\n",
+    "### Funkcja map_splits_on_data2 - od teraz daje czytelne etykiety klas\n",
+    "### Liście drzewa zawierają informacje o prowadzącej do nich ścieżce"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def map_splits_on_data2(df, splits):\n",
+    "    def assign_class(age):\n",
+    "        for i, split in enumerate(splits):\n",
+    "            if age <= split:\n",
+    "                return i\n",
+    "        return len(splits)\n",
+    "\n",
+    "    # Generowanie czytelnych etykiet przedziałów wiekowych\n",
+    "    age_labels = []\n",
+    "    for i, split in enumerate(splits):\n",
+    "        if i == 0:\n",
+    "            age_labels.append(f\"0-{int(split)}\")\n",
+    "        else:\n",
+    "            prev_split = int(splits[i-1])\n",
+    "            age_labels.append(f\"{prev_split + 1}-{int(split)}\")\n",
+    "    age_labels.append(f\"{int(splits[-1]) + 1}+\")\n",
+    "\n",
+    "    # Zamiana wartości w kolumnie \"Age\" na etykiety przedziałów\n",
+    "    df['Age'] = df['Age'].apply(lambda age: age_labels[assign_class(age)])\n",
+    "    return df\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def build_tree_with_decision2(df, tree, columns, parent=None, parent_id=\"root\", path=None):\n",
+    "    if path is None:\n",
+    "        path = []\n",
+    "\n",
+    "    if len(df['Survived'].unique()) == 1:\n",
+    "        count_survived = len(df[df['Survived'] == 1])\n",
+    "        count_dead = len(df[df['Survived'] == 0])\n",
+    "        decision = \"Survived\" if df['Survived'].values[0] == 1 else \"Dead\"\n",
+    "        path_description = \" -> \".join([f\"{p[0]}={p[1]}\" for p in path])\n",
+    "        leaf_description = f\"{decision}: {count_survived if decision == 'Survived' else count_dead} ({path_description})\"\n",
+    "        tree.create_node(leaf_description, parent_id, parent=parent)\n",
+    "        return\n",
+    "\n",
+    "    best_gain = 0.0\n",
+    "    best_column = None\n",
+    "    for column in columns:\n",
+    "        ig = information_gain(split(df, column))\n",
+    "        if ig > best_gain:\n",
+    "            best_gain = ig\n",
+    "            best_column = column\n",
+    "\n",
+    "    if best_gain == 0 or len(columns) == 0:\n",
+    "        count_survived = len(df[df['Survived'] == 1])\n",
+    "        count_dead = len(df[df['Survived'] == 0])\n",
+    "        path_description = \" -> \".join([f\"{p[0]}={p[1]}\" for p in path])\n",
+    "        leaf_description = f\"Niejednoznaczny wynik (Survived: {count_survived}, Dead: {count_dead}) ({path_description})\"\n",
+    "        tree.create_node(leaf_description, parent_id, parent=parent)\n",
+    "        return\n",
+    "\n",
+    "    remaining_columns = columns.copy()\n",
+    "    remaining_columns.remove(best_column)\n",
+    "\n",
+    "    count_survived = len(df[df['Survived'] == 1])\n",
+    "    count_dead = len(df[df['Survived'] == 0])\n",
+    "    param = parent_id.split('_')[-1]\n",
+    "    node_id = f\"{best_column}_{parent_id}\"\n",
+    "    tree.create_node(f\"{param} - {best_column} (Survived: {count_survived}, Dead: {count_dead})\", node_id, parent=parent)\n",
+    "\n",
+    "    for val in possible_values(df, best_column):\n",
+    "        filtered_df = df[df[best_column] == val]\n",
+    "        id_for_child = f\"{node_id}_{val}\"\n",
+    "        new_path = path + [(best_column, val)]\n",
+    "        build_tree_with_decision2(filtered_df, tree, remaining_columns, node_id, id_for_child, new_path)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "No i zmieniony lekko main:\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root - Sex (Survived: 40, Dead: 60)\n",
+      "├── female - SibSp (Survived: 33, Dead: 7)\n",
+      "│   ├── 1 - Pclass (Survived: 11, Dead: 4)\n",
+      "│   │   ├── 3 - Parch (Survived: 2, Dead: 4)\n",
+      "│   │   │   ├── Dead: 4 (Sex=female -> SibSp=1 -> Pclass=3 -> Parch=0)\n",
+      "│   │   │   ├── Survived: 1 (Sex=female -> SibSp=1 -> Pclass=3 -> Parch=1)\n",
+      "│   │   │   └── Survived: 1 (Sex=female -> SibSp=1 -> Pclass=3 -> Parch=5)\n",
+      "│   │   ├── Survived: 4 (Sex=female -> SibSp=1 -> Pclass=1)\n",
+      "│   │   └── Survived: 5 (Sex=female -> SibSp=1 -> Pclass=2)\n",
+      "│   ├── 3 - Age (Survived: 2, Dead: 1)\n",
+      "│   │   ├── Dead: 1 (Sex=female -> SibSp=3 -> Age=0-19)\n",
+      "│   │   └── Survived: 2 (Sex=female -> SibSp=3 -> Age=23+)\n",
+      "│   ├── Dead: 1 (Sex=female -> SibSp=2)\n",
+      "│   ├── Dead: 1 (Sex=female -> SibSp=5)\n",
+      "│   ├── Survived: 1 (Sex=female -> SibSp=4)\n",
+      "│   └── Survived: 19 (Sex=female -> SibSp=0)\n",
+      "└── male - Pclass (Survived: 7, Dead: 53)\n",
+      "    ├── 1 - SibSp (Survived: 4, Dead: 9)\n",
+      "    │   ├── 0 - Age (Survived: 4, Dead: 4)\n",
+      "    │   │   ├── 23+ - Parch (Survived: 3, Dead: 4)\n",
+      "    │   │   │   ├── Niejednoznaczny wynik (Survived: 1, Dead: 1) (Sex=male -> Pclass=1 -> SibSp=0 -> Age=23+ -> Parch=1)\n",
+      "    │   │   │   └── Niejednoznaczny wynik (Survived: 2, Dead: 3) (Sex=male -> Pclass=1 -> SibSp=0 -> Age=23+ -> Parch=0)\n",
+      "    │   │   └── Survived: 1 (Sex=male -> Pclass=1 -> SibSp=0 -> Age=0-19)\n",
+      "    │   ├── Dead: 1 (Sex=male -> Pclass=1 -> SibSp=3)\n",
+      "    │   └── Dead: 4 (Sex=male -> Pclass=1 -> SibSp=1)\n",
+      "    ├── 2 - Age (Survived: 2, Dead: 7)\n",
+      "    │   ├── Dead: 1 (Sex=male -> Pclass=2 -> Age=20-22)\n",
+      "    │   ├── Dead: 6 (Sex=male -> Pclass=2 -> Age=23+)\n",
+      "    │   └── Survived: 2 (Sex=male -> Pclass=2 -> Age=0-19)\n",
+      "    └── 3 - Parch (Survived: 1, Dead: 37)\n",
+      "        ├── 1 - Age (Survived: 1, Dead: 3)\n",
+      "        │   ├── Dead: 3 (Sex=male -> Pclass=3 -> Parch=1 -> Age=0-19)\n",
+      "        │   └── Survived: 1 (Sex=male -> Pclass=3 -> Parch=1 -> Age=23+)\n",
+      "        ├── Dead: 1 (Sex=male -> Pclass=3 -> Parch=3)\n",
+      "        ├── Dead: 1 (Sex=male -> Pclass=3 -> Parch=5)\n",
+      "        ├── Dead: 29 (Sex=male -> Pclass=3 -> Parch=0)\n",
+      "        └── Dead: 3 (Sex=male -> Pclass=3 -> Parch=2)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dane = prepare_pandas_df(\"titanic-homework.csv\")\n",
+    "best_splits = find_best_splits_for_continuous(dane, 3)\n",
+    "dane = map_splits_on_data2(dane, best_splits)\n",
+    "decision_tree2 = Tree()\n",
+    "columns = get_column_names(dane)\n",
+    "total_survived = len(dane[dane['Survived'] == 1])\n",
+    "total_dead = len(dane[dane['Survived'] == 0])\n",
+    "build_tree_with_decision2(dane, decision_tree2, columns)\n",
+    "print(decision_tree2.show(stdout=False))\n"
    ],
    "metadata": {
     "collapsed": false
