--- a/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
+++ b/Lab 1 - drzewa/Decision_trees_Kot_Samp.ipynb
@@ -431,6 +431,35 @@
     "    if path is None:\n",
     "        path = []\n",
     "\n",
+    "    if parent_id == \"root\":\n",
+    "        total_survived = len(df[df['Survived'] == 1])\n",
+    "        total_dead = len(df[df['Survived'] == 0])\n",
+    "        root_entropy = entropy([total_survived, total_dead])\n",
+    "        best_gain = 0.0\n",
+    "        best_gain_ratio = 0.0\n",
+    "        best_column = None\n",
+    "\n",
+    "        print(\"----- Report for Root -----\")\n",
+    "        for column in columns:\n",
+    "            splits = split(df, column)\n",
+    "            cond_entropy = conditional_entropy(splits)\n",
+    "            ig = information_gain(splits)\n",
+    "            gr = gain_ratio(splits)\n",
+    "            print(f\"--- Attribute: {column} ---\")\n",
+    "            print(f\"Entropy: {root_entropy:.4f}\")\n",
+    "            print(f\"Conditional Entropy: {cond_entropy:.4f}\")\n",
+    "            print(f\"Information Gain: {ig:.4f}\")\n",
+    "            print(f\"Gain Ratio: {gr:.4f}\")\n",
+    "            print(\"---------------------------------------------\\n\")\n",
+    "            if ig > best_gain:\n",
+    "                best_gain = ig\n",
+    "                best_gain_ratio = gr\n",
+    "                best_column = column\n",
+    "        print(f\"Best attribute for root split: {best_column}\")\n",
+    "        print(f\"Information Gain: {best_gain:.4f}\")\n",
+    "        print(f\"Gain Ratio: {best_gain_ratio:.4f}\\n\")\n",
+    "        print(\"---------------------------------------------\\n\")\n",
+    "\n",
     "    if len(df['Survived'].unique()) == 1:\n",
     "        count_survived = len(df[df['Survived'] == 1])\n",
     "        count_dead = len(df[df['Survived'] == 0])\n",
@@ -486,12 +515,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "----- Report for Root -----\n",
+      "--- Attribute: Pclass ---\n",
+      "Entropy: 0.9710\n",
+      "Conditional Entropy: 0.8893\n",
+      "Information Gain: 0.0817\n",
+      "Gain Ratio: 0.0596\n",
+      "---------------------------------------------\n",
+      "\n",
+      "--- Attribute: Sex ---\n",
+      "Entropy: 0.9710\n",
+      "Conditional Entropy: 0.5794\n",
+      "Information Gain: 0.3915\n",
+      "Gain Ratio: 0.4032\n",
+      "---------------------------------------------\n",
+      "\n",
+      "--- Attribute: Age ---\n",
+      "Entropy: 0.9710\n",
+      "Conditional Entropy: 0.9212\n",
+      "Information Gain: 0.0497\n",
+      "Gain Ratio: 0.0386\n",
+      "---------------------------------------------\n",
+      "\n",
+      "--- Attribute: SibSp ---\n",
+      "Entropy: 0.9710\n",
+      "Conditional Entropy: 0.9303\n",
+      "Information Gain: 0.0407\n",
+      "Gain Ratio: 0.0251\n",
+      "---------------------------------------------\n",
+      "\n",
+      "--- Attribute: Parch ---\n",
+      "Entropy: 0.9710\n",
+      "Conditional Entropy: 0.9544\n",
+      "Information Gain: 0.0166\n",
+      "Gain Ratio: 0.0146\n",
+      "---------------------------------------------\n",
+      "\n",
+      "Best attribute for root split: Sex\n",
+      "Information Gain: 0.3915\n",
+      "Gain Ratio: 0.4032\n",
+      "\n",
       "root - Sex (Survived: 40, Dead: 60)\n",
       "├── female - SibSp (Survived: 33, Dead: 7)\n",
       "│   ├── 1 - Pclass (Survived: 11, Dead: 4)\n",
@@ -544,6 +613,15 @@
     "build_tree_with_decision2(dane, decision_tree2, columns)\n",
     "print(decision_tree2.show(stdout=False))\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
