todo - the report still, all rest is done

--- a/Lab 4 - k-NN i scikit-learn/Exercices_knn.ipynb
+++ b/Lab 4 - k-NN i scikit-learn/Exercices_knn.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 1. K-NN classifier\n",
     "\n",
@@ -13,7 +12,10 @@
     "**Question** What are the advantages and disadvantages of this algorithm? For which kind of dataset it would be appropriate and for which datasets it wouldn't?\n",
     "\n",
     "**Question** How can we deal with nominal values in distance measurement?\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -205,7 +207,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "def standarize_train_and_test(train_X, test_X, option =1):\n",
+    "def standarize_train_and_test(train_X, test_X, option = 1):\n",
     "    if option == 1:\n",
     "        scaler = preprocessing.StandardScaler()\n",
     "    elif option == 2:\n",
@@ -218,7 +220,7 @@
     "    return norm_train_X, norm_test_X\n",
     "\n",
     "\n",
-    "norm_train_X, norm_test_X = standarize_train_and_test(train_X, test_X)\n",
+    "norm_train_X, norm_test_X = standarize_train_and_test(train_X, test_X, 1)\n",
     "print(get_classification_accuracy(norm_train_X, train_Y, norm_test_X, test_Y))\n",
     "\n",
     "norm_train_X, norm_test_X = standarize_train_and_test(train_X, test_X, 2)\n",
@@ -244,14 +246,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sklearn\n",
     "\n",
-    "# TODO\n",
-    "w = []\n",
+    "accuracy_scores = []\n",
     "for k in range(1, 21):\n",
-    "    neigh = KNeighborsClassifier(k)\n",
-    "    neigh.fit(norm_train_X, train_Y)\n",
-    "    p = sklearn.model_selection.cross_validate(neigh, norm_test_X, test_Y, scoring=chi2)\n"
+    "    neigh = KNeighborsClassifier(n_neighbors=k)\n",
+    "    # todo PYTANIE: czy używać tutaj norm_train_X, czy przedłużyć to o _test_X, z racji że używamy cross-walidacji\n",
+    "    cv_results = sklearn.model_selection.cross_validate(neigh, norm_train_X, train_Y, cv=5, scoring='accuracy')\n",
+    "    accuracy_scores.append(cv_results['test_score'].mean())\n",
+    "\n",
+    "# print(accuracy_scores)\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(range(1, 21), accuracy_scores, marker='o', color='b', linestyle='-', markersize=5)\n",
+    "plt.xlabel(\"k\")\n",
+    "plt.ylabel(\"Mean Cross-Validated Accuracy\")\n",
+    "plt.title(\"k-NN Accuracy\")\n",
+    "plt.grid()\n",
+    "plt.show()\n",
+    "\n",
+    "best_k = accuracy_scores.index(max(accuracy_scores)) + 1\n",
+    "print(f\"The best k value is {best_k} with a mean (training) accuracy of {max(accuracy_scores)}\")\n"
    ]
   },
   {
@@ -268,8 +281,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO\n",
-    "# get_classification_accuracy(..."
+    "final_accuracy = get_classification_accuracy(norm_train_X, train_Y, norm_test_X, test_Y, k=best_k)\n",
+    "# print(best_k, final_accuracy)\n",
+    "print(final_accuracy)\n",
+    "\n",
+    "# bonus, sprawdzenie pozostałych czy \"najlepsze\" k jest rzeczywiście najlepsze\n",
+    "# acc2scores = []\n",
+    "# for k in range(1, 21):\n",
+    "#     final_accuracy = get_classification_accuracy(norm_train_X, train_Y, norm_test_X, test_Y, k=k)\n",
+    "#     print(f\"{k}: final_accuracy: {final_accuracy}\")\n",
+    "#     acc2scores.append(final_accuracy)\n",
+    "# new_best_k = acc2scores.index(max(acc2scores)) + 1\n",
+    "# print(f\"The best k value is {new_best_k} with accuracy of {max(acc2scores)}\")\n"
    ]
   },
   {
@@ -280,16 +303,83 @@
     "You are given a dataset containing information about 1600 red wines (winequality.csv) containing 11 attributes and assignment to one of the three wine quality classess: \"poor\", \"medium\" and \"good\". Perform a preprocessing of this dataset (normalization, standardization). Divide this set into the train and test sets. Choose experimentally the best value of k (using cross-validation) and perform classification using the  k-nn algoritm with the chosen k value. Write a report containing information about the used preprocessing methods, chosen train/test split method (percentage of examples in train/test sets, if shuffling or stratification used), plot of the accuracy depending of k parameter, finally chosen k and obtained classification accuracy on a test set.\n",
     "\n",
     "**Deadline +2 weeks**\n",
-    "    \n",
-    "    "
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# use to standardize\n",
+    "def standardize_set(X, option = 1):\n",
+    "    if option == 1:\n",
+    "        scaler = preprocessing.StandardScaler()\n",
+    "    elif option == 2:\n",
+    "        scaler = preprocessing.MinMaxScaler()\n",
+    "    else:\n",
+    "        scaler = preprocessing.MaxAbsScaler()\n",
+    "    norm_X = scaler.fit_transform(X)\n",
+    "    return norm_X\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"./winequality-red.csv\")\n",
+    "# print(data)\n",
+    "Y = data['quality']\n",
+    "X = data.drop('quality', axis = 1)\n",
+    "\n",
+    "# is it needed to split, if we use cv? anyway, sticking to plan\n",
+    "(train_X, test_X, train_Y, test_Y) = split_data(X, Y)\n",
+    "norm_train_X, norm_test_X = standarize_train_and_test(train_X, test_X, 1)\n",
+    "\n",
+    "# norm_X = standardize_set(X, 1)\n",
+    "# print(norm_X)\n",
+    "\n",
+    "# finding best k\n",
+    "accuracy_scores = []\n",
+    "for k in range(1, 21):\n",
+    "    neigh = KNeighborsClassifier(n_neighbors=k)\n",
+    "    cv_results = sklearn.model_selection.cross_validate(neigh, norm_train_X, train_Y, cv=10, scoring='accuracy')\n",
+    "    accuracy_scores.append(cv_results['test_score'].mean())\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(range(1, 21), accuracy_scores, marker='o', color='b', linestyle='-', markersize=5)\n",
+    "plt.xlabel(\"k\")\n",
+    "plt.ylabel(\"Mean Cross-Validated Accuracy\")\n",
+    "plt.title(\"k-NN Accuracy\")\n",
+    "plt.grid()\n",
+    "plt.show()\n",
+    "best_k = accuracy_scores.index(max(accuracy_scores)) + 1\n",
+    "print(f\"The best k value is {best_k} with a mean (training) accuracy of {max(accuracy_scores)}\")\n",
+    "\n",
+    "# get final accuracy\n",
+    "final_accuracy = get_classification_accuracy(norm_train_X, train_Y, norm_test_X, test_Y, k=best_k)\n",
+    "print(f\"The final accuracy is: {final_accuracy}\")\n",
+    "\n",
+    "# todo WRITE A REPORT\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
