--- a/Lab 5 - skupienia/k-means_exercises.ipynb
+++ b/Lab 5 - skupienia/k-means_exercises.ipynb
@@ -56,7 +56,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO you are given data in X_train, X_test, y_train, y_test variables"
+    "#TODO you are given data in X_train, X_test, y_train, y_test variables\n",
+    "\n",
+    "neigh = KNeighborsClassifier(n_neighbors=3)\n",
+    "neigh.fit(X_train, y_train)\n",
+    "acc = accuracy_score(y_test, neigh.predict(X_test))\n",
+    "print(acc)\n",
+    "\n",
+    "selector = SelectKBest(score_func=mutual_info_classif, k=30)\n",
+    "X_train_reduced = selector.fit_transform(X_train, y_train)\n",
+    "X_test_reduced = selector.transform(X_test)\n",
+    "\n",
+    "neigh2 = KNeighborsClassifier(n_neighbors=3)\n",
+    "neigh2.fit(X_train_reduced, y_train)\n",
+    "acc = accuracy_score(y_test, neigh2.predict(X_test_reduced))\n",
+    "print(acc)"
    ]
   },
   {
@@ -65,7 +79,8 @@
    "source": [
     "In the exercise above we set the number of features arbitrarily. \n",
     "\n",
-    "**Question** How can we find the optimal number of attributes in machine learning problems?"
+    "**Question** How can we find the optimal number of attributes in machine learning problems?\n",
+    "\n"
    ]
   },
   {
